# cuekiyo

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  SMALLCODE_SKILLS.md  eslint.config.js  package-lock.json  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  enums.py  main.py  models.py  state_machine.py
backend/app/api/: deps.py  routes.py
backend/app/jobs/: runner.py
backend/app/schemas/: job.py  overlay.py  project.py  reprocess.py  settings.py  song.py
backend/app/services/: anilist_client.py  anime_metadata.py  ffmpeg_engine.py  jikan_client.py  overlay_renderer.py  paths.py  youtube_sourcer.py  youtube_url.py
backend/tests/: conftest.py  test_audit_fixes.py  test_candidate_schema.py  test_clip_download.py  test_config.py  test_database_migration.py  test_ffmpeg_concat.py  test_ffmpeg_quality.py  test_ffmpeg_safety.py  test_heatmap.py  test_jikan_client.py  test_manual_candidate.py  test_overlay_config.py  test_overlay_config_gate.py  test_overlay_preview.py  test_overlay_renderer.py  test_paths.py  test_progress.py  test_project_fade.py  test_render_order.py  test_reprocess.py  test_scoring.py  test_security_fixes.py  test_settings.py  test_stage_resume.py  test_state_machine.py  test_theme_parser.py  test_youtube_sourcer.py  test_youtube_url.py
frontend/: AUDIT.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json
(+52 files in other folders)
